<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp">
    <TextView
        android:text="@string/gameover_text_title"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:fontFamily="@font/chopstic"
        android:textSize="30sp"
        android:scaleType="center"
        android:id="@+id/win_over_text"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/name_leaderbord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:paddingLeft="15dp"
            android:hint="@string/gameovew_text_hint" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/btn_submit"
            android:padding="15dp"
            android:text="@string/gameover_btn_submit"/>
    </LinearLayout>


</LinearLayout>
